--- a/app/templates/addresses.html
+++ b/app/templates/addresses.html
@@ -1,13 +1,16 @@
-<html>
+{% extends "base.html" %}
+{% block content %}
 
-<head>
+<body>
 
-<title>SNAP ~ Address Finder </title>
+<div id='address_container'>
+<div class='address_finder'>address 1</div>
+<div class='address_finder'>address 2</div>
+<div class='address_finder'>address 3</div>
+<div class='address_finder'>address 4</div>
+<div class='address_finder'>address 5</div>
+<div class='address_finder'>address 6</div>
 
-</head>
+</div>
 
-<link rel="stylesheet" type="text/css" href="SNAP.css">
-
-<div class='address_finder'>Tidal Waves</div>
-
-</html>
+{% endblock %}
