food icons--working on checkboxes

--- a/app/templates/SNAP.html
+++ b/app/templates/SNAP.html
@@ -61,7 +61,7 @@
 		<h3>zipcode</h3>-->
 
 		
-
+  
 	<div class='grocery_checklist'></div>
 	<div class='grocery_checklist'></div>
 	<div class='grocery_checklist'></div>
@@ -69,6 +69,8 @@
 	<div id='coconut'><p class="text">fruits</p></div>
 
 	<div id='carrot'><p class="text">vegetables</p></div>
+
+	<div id='steak'><p class="text">meat</p></div>
 
 	<div id='results'>Search Results:</div>
 
