--- a/app/static/SNAP.css
+++ b/app/static/SNAP.css
@@ -151,6 +151,27 @@
 
 	}
 
+li:not(#foo) > fieldset > div > span > input[type='checkbox'] {
+
+										opacity: 0;
+    									float: left;
+    									width: 18px;
+
+
+}
+
+
+li:not(#foo) > fieldset > div > span > input[type='checkbox'] + label {
+    margin: 0;
+    clear: none;
+    
+    /* Left padding makes room for image */
+    padding: 5px 0 4px 24px;
+
+    /* Make look clickable because they are */
+    cursor: pointer;
+}
+
 #coconut  	{background-image:url("coconut.jpg");
 			 position: absolute;
 			 width: 30px;
@@ -181,11 +202,29 @@
 			}
 
 #carrot:hover .text	{visibility: visible;}
+
+#steak		{background-image: url("steak_edt.png");
+			 position: absolute;
+			 width: 80px;
+			 height: 50px;
+			 margin-top: 75px;
+			 margin-left: 455px;}
+
+#steak .text  {position: absolute;
+				visibility: hidden;
+				margin-top: 47px;
+				margin-left: 17px;
+			}
+
+#steak:hover .text {visibility: visible;
+
+}
+
 #results	{ background-color: #FFFFFF;
 	    float: right;
 	  	width: 1000px;
 	   height: 100px;
-	   margin-top: 75px;
+	   margin-top: 100px;
 	   border-style: "solid";
 	   border-width: 2px;
 	   border-color: black;
